# Stocker

./: .gitignore  README.md
source/: CMakeLists.txt  main  main.cpp
source/modules/: columns.h  databaseManager.cpp  databaseManager.h  listElements.cpp  listElements.h  testLib.cpp  testLib.h  window.cpp  window.h
